force-app/main/default/objects/Artist_Statement__c/Artist_Statement__c.object-meta.xml
<CustomObject>
    <label>Artist Statement</label>
    <nameField>
        <label>Artist Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artist Statements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>