force-app/main/default/objects/Artist_Statement__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Artist</label>
    <referenceTo>Artist__c</referenceTo>
    <relationshipLabel>Artist Statements</relationshipLabel>
    <relationshipName>Artist_Statements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>