force-app/main/default/objects/Artist_Statement__c/fields/Payable_to_Artist__c.field-meta.xml
<CustomField>
    <fullName>Payable_to_Artist__c</fullName>
    <formula>Subtotal__c 
	+ Total_Travel_Fees__c 
	+ Total_Expenses__c 
	-  Total_Expenses_Paid_by_VE__c 
	+ IF(Artist__r.Name = &apos;FATMAN&apos;,Total_Technical_Fees__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payable to Artist</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>