force-app/main/default/objects/Artist_Statement__c/fields/Payable_to_Fatman__c.field-meta.xml
<CustomField>
    <fullName>Payable_to_Fatman__c</fullName>
    <label>Payable to Fatman</label>
    <summarizedField>Artist_Statement_Line_Item__c.Subtotal__c</summarizedField>
    <summaryForeignKey>Artist_Statement_Line_Item__c.Artist_Statement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>