force-app/main/default/objects/Artist_Statement__c/fields/PDF_Template__c.field-meta.xml
<CustomField>
    <fullName>PDF_Template__c</fullName>
    <description>Determines which template to use for the PDF Merge</description>
    <formula>IF( Artist__r.Name = &apos;FATMAN&apos;,&apos;FATMAN&apos;,
			IF(Artist__r.Name = &apos;Appel&apos;,&apos;APPEL&apos;,
						IF(Artist__r.Name = &apos;Ricus Nel&apos;,&apos;RICUS&apos;,
        IF(Artist__r.Name = &apos;Jakkals Vibes Performer&apos; ,&apos;JAKKALS&apos;,&apos;OTHER&apos;
				))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF Template</label>
    <type>Text</type>
</CustomField>