force-app/main/default/objects/Artist_Statement__c/fields/Record_Company_Commission__c.field-meta.xml
<CustomField>
    <fullName>Record_Company_Commission__c</fullName>
    <label>Record Company Commission</label>
    <summarizedField>Artist_Statement_Line_Item__c.Record_Company_Commission__c</summarizedField>
    <summaryForeignKey>Artist_Statement_Line_Item__c.Artist_Statement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>