force-app/main/default/objects/Artist_Statement__c/fields/Total_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Total_Commissions__c</fullName>
    <label>Total Commissions</label>
    <summarizedField>Artist_Statement_Line_Item__c.Total_Commission__c</summarizedField>
    <summaryForeignKey>Artist_Statement_Line_Item__c.Artist_Statement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>