force-app/main/default/objects/Artist_Statement__c/fields/Total_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses__c</fullName>
    <label>Total Expenses</label>
    <summarizedField>Artist_Statement_Line_Item__c.Expenses__c</summarizedField>
    <summaryForeignKey>Artist_Statement_Line_Item__c.Artist_Statement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>