force-app/main/default/objects/Artist_Statement__c/fields/Total_Expenses_Paid_by_VE__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses_Paid_by_VE__c</fullName>
    <inlineHelpText>The Total Amount of Expenses Paid by Vocal Events</inlineHelpText>
    <label>Total Expenses Paid by VE</label>
    <summarizedField>Artist_Statement_Line_Item__c.Expenses_Paid_by_VE__c</summarizedField>
    <summaryForeignKey>Artist_Statement_Line_Item__c.Artist_Statement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>