force-app/main/default/objects/Artist_Statement__c/fields/Total_Travel_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Travel_Fees__c</fullName>
    <label>Total Travel Fees</label>
    <summarizedField>Artist_Statement_Line_Item__c.Travel_Fee__c</summarizedField>
    <summaryForeignKey>Artist_Statement_Line_Item__c.Artist_Statement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>