force-app/main/default/objects/Artist_Statement__c/fields/Vocal_Events_Commission__c.field-meta.xml
<CustomField>
    <fullName>Vocal_Events_Commission__c</fullName>
    <label>Vocal Events Commission</label>
    <summarizedField>Artist_Statement_Line_Item__c.Vocal_Events_Commission__c</summarizedField>
    <summaryForeignKey>Artist_Statement_Line_Item__c.Artist_Statement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>